--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<head>
 	</head>
 <body>
-		 
+print
+
+<!--    Test.assertEquals(printerError(s), "3/56")-->
+
 	
 	<script src="app.js"></script>
 	
